# odir

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile  odir-config.json  sonar-project.properties
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  dco.yml  dependency-review.yml  md-lint.yml  osv-scanner.yml  rust.yml  sonar.yml
src/: config.rs  main.rs  signal_handler.rs  sysinfo.rs
src/downloader/: hf_downloader.rs  manifest.rs  mod.rs  model_downloader.rs  ollama_downloader.rs  utils.rs
tests/: README.md  cli_hf_download.rs  cli_ollama_download.rs
tests/common/: mod.rs
