[package]
name = "odir"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "stream"], default-features = false }
scraper = "0.25"
thiserror = "2.0"
sha2 = "0.10"
indicatif = "0.18"
tempfile = "3.25"
sysinfo = "0.38"
uzers = "0.12"
regex = "1.12"
