[package]
name = "odir"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Ollama Downloader in Rust (ODIR), pronounced _oh dear_, is a command-line tool written in Rust for downloading models from Ollama."
repository = "https://github.com/anirbanbasu/odir"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "stream"], default-features = false }
scraper = "0.25"
thiserror = "2.0"
sha2 = "0.10"
indicatif = "0.18"
tempfile = "3.25"
regex = "1.12"
directories = "6.0"
libc = "0.2"
signal-hook = "0.4"
crossterm = "0.29"
